--- a/english.html
+++ b/english.html
@@ -289,6 +289,8 @@ Error message and password prompt
 
 <li>Autarky</li>
 
+<li>Autumn</li>
+
 <li>Ayala Malach Pines</li>
 
 <li>Baking</li>
@@ -351,6 +353,8 @@ Error message and password prompt
 
 <li>Coffee shops</li>
 
+<li>Dalya`s room</li>
+
 <li>Dandan</li>
 
 <li>Dandan went</li>
@@ -411,7 +415,11 @@ Error message and password prompt
 
 <li>Genevieve</li>
 
+<li>Ghetto`s map</li>
+
 <li>Gigi</li>
+
+<li>Gili's kiosk</li>
 
 <li>Graziani</li>
 
@@ -441,9 +449,13 @@ Error message and password prompt
 
 <li>Haruki Murakami</li>
 
+<li>Hashmal Avi</li>
+
 <li>Here in the Ghetto</li>
 
 <li>HH</li>
+
+<li>Hinnawi</li>
 
 <li>Holiday psalms</li>
 
@@ -503,6 +515,8 @@ Error message and password prompt
 
 <li>Keep on bleeding</li>
 
+<li>Kehol Haniree</li>
+
 <li>Keren</li>
 
 <li>Key board</li>
@@ -534,6 +548,8 @@ Error message and password prompt
 <li>logo-bg</li>
 
 <li>Love</li>
+
+<li>Manta Ray</li>
 
 <li>Marianne</li>
 
@@ -602,6 +618,8 @@ Error message and password prompt
 <li>Papa Yoel</li>
 
 <li>Passover Seder at Dad's and Tirza's</li>
+
+<li>Pasta Mia</li>
 
 <li>Peacock</li>
 
@@ -697,11 +715,15 @@ Error message and password prompt
 
 <li>Sultana and Yasmin</li>
 
+<li>Tal Bagels</li>
+
 <li>Technical director</li>
 
 <li>Tel Aviv Desk</li>
 
 <li>The archive's trustees</li>
+
+<li>The baristas here</li>
 
 <li>The bartender</li>
 
@@ -773,6 +795,8 @@ Error message and password prompt
 
 <li>Tomer</li>
 
+<li>Tony Vespa</li>
+
 <li>Torte</li>
 
 <li>True blood</li>
@@ -782,6 +806,8 @@ Error message and password prompt
 <li>TV</li>
 
 <li>TV Series</li>
+
+<li>Urban Nature</li>
 
 <li>Vegan recipes</li>
 
@@ -810,6 +836,8 @@ Error message and password prompt
 <li>Wishing star 04</li>
 
 <li>With Yoyo in Amsterdam</li>
+
+<li>Women`s protest</li>
 
 <li>Wyclef Jean</li>
 
@@ -9104,6 +9132,13 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
 
 </pre>
 </div>
+<div created="20200226071336479" modified="20200226072517041" tags="[[Here in the Ghetto]]" title="Autumn">
+<pre>
+[img[pictures/stav.jpg]]
+
+
+ &lt;&lt;heblink [[סתיו]]&gt;&gt;</pre>
+</div>
 <div created="20191113130654313" modified="20200212181621602" tags="[[Outer sisters]]" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
@@ -9116,7 +9151,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200220164115627" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200226072607606" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9550,6 +9585,20 @@ It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's
 
  &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
 </div>
+<div created="20200226063122808" modified="20200226063326805" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]]" title="Dalya`s room">
+<pre>
+[img[pictures/dalya.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[החדר של דליה]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200215120453473" modified="20200219090452553" tags="[[Dandan went]] Laundry [[Coen sister]]" title="Dandan">
 <pre>[img[pictures/dandan.jpg]]
 
@@ -9843,7 +9892,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200225191719073" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200226072629369" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -9856,8 +9905,8 @@ The best [[movie|https://en.wikipedia.org/wiki/Cinematography]] I’ve seen late
 
 &lt;&lt;list-links filter:&quot;[tag[Films]]&quot;&gt;&gt;
 
- &lt;&lt;heblink [[סרטים]]&gt;&gt;
-</pre>
+
+ &lt;&lt;heblink [[סרטים]]&gt;&gt;</pre>
 </div>
 <div created="20200213154202937" modified="20200220183349805" tags="Kitchens [[Monkeys with car keys]] Coffee" title="Food addicts">
 <pre>[img[pictures/chayot-ochel.jpg]] 
@@ -9953,6 +10002,14 @@ She loves us and take care of us all. In the end of every working day she moves 
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
+<div created="20200226070954178" modified="20200226071112777" tags="[[Here in the Ghetto]]" title="Ghetto`s map">
+<pre>
+
+[img[pictures/ghettos-map.jpg]]
+
+
+ &lt;&lt;heblink [[מפת הגטו]]&gt;&gt;</pre>
+</div>
 <div created="20200217184337290" modified="20200217184926961" tags="[[The Baumans]] [[I would like to apologize]]" title="Gigi">
 <pre>[img[pictures/gigi.jpg]]
 
@@ -9966,6 +10023,14 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
 
 </pre>
+</div>
+<div created="20200226072008566" modified="20200226072129972" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="Gili's kiosk">
+<pre>
+[img[pictures/gili.jpg]]
+
+
+
+ &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
 </div>
 <div created="20200225185730232" modified="20200225185911534" tags="[[Here in the Ghetto]] [[Coffee shops]] Coffee Baking" title="Graziani">
 <pre>
@@ -10165,6 +10230,15 @@ Here in the picture are Hanna my mother and I, few months before she passed away
 
  &lt;&lt;heblink [[הרוקי מורקמי]]&gt;&gt;</pre>
 </div>
+<div created="20200226064513284" modified="20200226064746447" tags="[[Here in the Ghetto]] [[A friend]] Metafiction" title="Hashmal Avi">
+<pre>
+[img[pictures/hashmal-avi.jpg]]
+
+
+
+ &lt;&lt;heblink [[חשמל אבי]]&gt;&gt;
+</pre>
+</div>
 <div created="20200212164615918" modified="20200219150430746" tags="Metafiction [[Outer sisters]] [[The global village]]" title="Here in the Ghetto">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
@@ -10193,6 +10267,15 @@ The only thing that I'm missing here [[in the ghetto|https://www.youtube.com/wat
 
 
 
+</pre>
+</div>
+<div created="20200226063715410" modified="20200226063849398" tags="[[Here in the Ghetto]] Kitchens" title="Hinnawi">
+<pre>
+[img[pictures/hinawi.jpg]]
+
+
+
+ &lt;&lt;heblink [[חינאווי]]&gt;&gt;
 </pre>
 </div>
 <div created="20200220150514247" modified="20200220151401606" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction [[True stories]]" title="Holiday psalms">
@@ -10571,6 +10654,15 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
+<div created="20200226065813953" modified="20200226065939356" tags="[[Here in the Ghetto]] [[A friend]] [[True stories]]" title="Kehol Haniree">
+<pre>
+[img[pictures/kechol-hanire.jpg]]
+
+
+
+ &lt;&lt;heblink [[ככל הנראה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200218193250690" modified="20200218193352875" tags="[[The Baumans]]" title="Keren">
 <pre>[img[pictures/keren.jpg]]
 
@@ -10760,6 +10852,15 @@ For example, it seethes me when people use words purposelessly, like the word lo
 
  &lt;&lt;heblink [[אהבה]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200226070258742" modified="20200226070425892" tags="[[Here in the Ghetto]] Restaurants Mothers" title="Manta Ray">
+<pre>
+[img[pictures/mantaray.jpg]]
+
+
+
+ &lt;&lt;heblink [[מאנטה ריי]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215180640097" modified="20200215181032321" tags="Mothers" title="Marianne">
@@ -11222,6 +11323,14 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 
  &lt;&lt;heblink [[ליל הסדר אצל אבא ותרצה]]&gt;&gt;
 </pre>
+</div>
+<div created="20200226071622540" modified="20200226071754636" tags="[[Here in the Ghetto]] Restaurants" title="Pasta Mia">
+<pre>
+[img[pictures/pasta-mia.jpg]]
+
+
+
+ &lt;&lt;heblink [[פסטה מיאה]]&gt;&gt;</pre>
 </div>
 <div created="20200219133655778" modified="20200219142218006" tags="[[Here in the Ghetto]] Restaurants" title="Peacock">
 <pre>[img[pictures/peacock.jpg]]
@@ -11813,6 +11922,15 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
  &lt;&lt;heblink [[סולטנה ויסמין]]&gt;&gt;
 </pre>
 </div>
+<div created="20200226065424547" modified="20200226065603791" tags="Coffee [[Here in the Ghetto]] Restaurants" title="Tal Bagels">
+<pre>
+[img[pictures/tal-bagels.jpg]]
+
+
+
+ &lt;&lt;heblink [[טל בייגלס]]&gt;&gt;
+</pre>
+</div>
 <div created="20200219131041061" modified="20200219131244245" tags="TV [[Here in the Ghetto]] [[True stories]]" title="Technical director">
 <pre>[img[pictures/natav.jpg]]
 
@@ -11846,6 +11964,14 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 &lt;&lt;list-links filter:&quot;[tag[The archive's trustees]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
+</div>
+<div created="20200226072300277" modified="20200226072654606" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="The baristas here">
+<pre>
+[img[pictures/barista.jpg]]
+
+
+
+ &lt;&lt;heblink [[הבריסטות שכאן]]&gt;&gt;</pre>
 </div>
 <div created="20200219160048637" modified="20200219161134785" tags="HH Coffee" title="The bartender">
 <pre>[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
@@ -12275,6 +12401,18 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 </pre>
 </div>
+<div created="20200226065025023" modified="20200226065231567" tags="[[Here in the Ghetto]] Restaurants Kitchens" title="Tony Vespa">
+<pre>
+[img[pictures/tony-vespa.jpg]]
+
+
+
+ &lt;&lt;heblink [[טוני וספה]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20200216145644090" modified="20200216191320983" tags="Baking Recipes [[Food addicts]] [[When they sleep]]" title="Torte">
 <pre>[img[pictures/tort.jpg]]
 
@@ -12319,6 +12457,16 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 
 
+
+</pre>
+</div>
+<div created="20200226064334395" modified="20200226064504279" tags="[[Here in the Ghetto]] Music [[True stories]]" title="Urban Nature">
+<pre>
+[img[pictures/zirey-kaitz.jpg]]
+
+
+
+ &lt;&lt;heblink [[טבע עירוני]]&gt;&gt;
 
 </pre>
 </div>
@@ -12501,6 +12649,14 @@ In [[my name|Wyclef Jean]] and in [[Wyclef Jean's name|https://www.youtube.com/w
 
  &lt;&lt;heblink [[עם יויו באמסטרדם]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200226070625435" modified="20200226070736675" tags="[[Here in the Ghetto]] Mothers" title="Women`s protest">
+<pre>
+[img[pictures/mechaat-hanashim.jpg]]
+
+
+ &lt;&lt;heblink [[מחאת הנשים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213170826128" modified="20200220181652289" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
