--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] [[הארבעה 2]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] [[הבריסטות שכאן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200225191819142" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200226072715803" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12244,7 +12244,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Harry Dean Stanton]]&gt;&gt;
 </pre>
 </div>
-<div created="20190324091820505" modified="20190617133335451" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="הבריסטות שכאן">
+<div created="20190324091820505" modified="20200226072744917" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="הבריסטות שכאן">
 <pre>[img[pictures/barista.jpg]]
 
 !!![[תומר]]:
@@ -12253,6 +12253,10 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 (צולם [[בלחמים|לחמים]])
 
+
+
+
+&lt;&lt;englink [[The baristas here]]&gt;&gt;
 </pre>
 </div>
 <div created="20161217141221233" modified="20200219160632801" tags="HH קפה" title="הברמנית">
@@ -12395,13 +12399,19 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כן, כשאנחנו ילדות אנחנו נכנסות [[בפייד אין|https://he.wikipedia.org/wiki/%D7%94%D7%AA%D7%91%D7%92%D7%A8%D7%95%D7%AA_%D7%9E%D7%99%D7%A0%D7%99%D7%AA]] שאורך כמה שנים, למעגל ההורמונלי עד הבשלות ללדת. [[הורמונים|https://he.wikipedia.org/wiki/%D7%94%D7%95%D7%A8%D7%9E%D7%95%D7%9F]] ששמם הכללי הוא [[אסטרוגן|https://he.wikipedia.org/wiki/%D7%90%D7%A1%D7%98%D7%A8%D7%95%D7%92%D7%9F]] משתתפים בפעילויות שונות של הגוף ומוציאים אותנו מדעתינו בלי שידענו. אחר כך לאורך 30 שנה בערך, אם צריך או לא, [[אנחנו ממשיכות|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%97%D7%96%D7%95%D7%A8_%D7%94%D7%97%D7%95%D7%93%D7%A9%D7%99]] לבייץ, להיות לפני מחזור של גלי כאב, עייפות, מצבי רוח, חוסר סבלנות ועוד, עד שמתחיל [[הפייד אאוט|https://he.wikipedia.org/wiki/%D7%92%D7%99%D7%9C_%D7%94%D7%9E%D7%A2%D7%91%D7%A8_%D7%90%D7%A6%D7%9C_%D7%A0%D7%A9%D7%99%D7%9D]], ששיאו בהפסקת המחזור, גלי חום, מצבי רוח, הזקנה הקופצת, העור המתקמט, כאבים ועוד אבל יש תמורה - אין יותר מחזור חודשי ויש תקווה שכל המהומה הזו תיפסק, ונחזור להיות כמו שהיינו כשהיינו בנות שמונה.</pre>
 </div>
-<div created="20200126135042452" modified="20200208125733988" tags="[[כאן בגטו]] [[מטא בדיון]] בתים [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="החדר של דליה">
+<div created="20200126135042452" modified="20200226063427323" tags="[[כאן בגטו]] [[מטא בדיון]] בתים [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="החדר של דליה">
 <pre>[img[pictures/dalya.jpg]]
 
 !!![[תומר]]:
 
 זה החדר של דליה, המורה הנפלאה שלי [[לאלכסנדר|שיטת אלכסנדר]], אליה אני מגיע מידי שבוע לשיעור. אנחנו נכנסים לחדר לא לפני שישבנו ודיברנו ליד שולחן האוכל, שנמצא בין המטבח לסלון עם החלונות הרחבים מולם עומדת שורת ברושים. אי של שקט בתוך הכל. אחר כך על הכיסא, בזמן שדליה מכוונת אותי ומדברת אלי, אני עוצר, נושם, שולח בחיבור, מחדש את המבט כשיונה לבנה נוחתת על החלון שמולי. &quot;ראית את זה?&quot;, היא שואלת אותי. &quot;כן&quot;, אני עונה לה, ואני שוב קצת אחר ומלא [[צליל חדש|https://www.youtube.com/watch?v=oDBl0aqrl6Q]].
 
+
+
+
+
+
+&lt;&lt;englink [[Dalya`s room]]&gt;&gt;
 </pre>
 </div>
 <div created="20170514201348734" modified="20200215172244737" tags="[[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="החיים זה לא דיבורים">
@@ -12882,12 +12892,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181107090226210" modified="20190617133625043" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="הקיוסק של גילי">
+<div created="20181107090226210" modified="20200226072231723" tags="[[כאן בגטו]] קפה [[בתי קפה]]" title="הקיוסק של גילי">
 <pre>[img[pictures/gili.jpg]]
 
 !!![[תומר]]:
 
-את גילי הנפלא אני מכיר עוד מהתקופה שהיה סניף של [[רביבה וסיליה|https://www.revivaandcelia.co.il/]] ברחוב הארבעה, ליד [[מערכת תל אביב]]. כמה שמחתי כשגיליתי שהוא פתח את [[הקיוסק שלו|https://www.facebook.com/%D7%92%D7%99%D7%9C%D7%99-%D7%A7%D7%99%D7%95%D7%A1%D7%A7-%D7%91%D7%A8%D7%95%D7%98%D7%A9%D7%99%D7%9C%D7%93-Gilis-kiosk-1264150057010863/?ref=page_internal]] ברוטשילד 31 פינת אלנבי, שם יכינו לך קפה טעים עם מאפים טעימים של רביבה וסיליה וחיוך של טוב. אני לוקח מקיאטו כפול וממשיך [[לנוטבוק|נוטבוק]].</pre>
+את גילי הנפלא אני מכיר עוד מהתקופה שהיה סניף של [[רביבה וסיליה|https://www.revivaandcelia.co.il/]] ברחוב הארבעה, ליד [[מערכת תל אביב]]. כמה שמחתי כשגיליתי שהוא פתח את [[הקיוסק שלו|https://www.facebook.com/%D7%92%D7%99%D7%9C%D7%99-%D7%A7%D7%99%D7%95%D7%A1%D7%A7-%D7%91%D7%A8%D7%95%D7%98%D7%A9%D7%99%D7%9C%D7%93-Gilis-kiosk-1264150057010863/?ref=page_internal]] ברוטשילד 31 פינת אלנבי, שם יכינו לך קפה טעים עם מאפים טעימים של רביבה וסיליה וחיוך של טוב. אני לוקח מקיאטו כפול וממשיך [[לנוטבוק|נוטבוק]].
+
+
+&lt;&lt;englink [[Gili's kiosk]]&gt;&gt;</pre>
 </div>
 <div created="20190911122045171" modified="20200208125851915" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="הקלה אחר כך">
 <pre>[img[pictures/hakala.jpg]]
@@ -13172,12 +13185,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Food addicts]]&gt;&gt;</pre>
 </div>
-<div created="20180715130735407" modified="20190617133831770" tags="[[כאן בגטו]] [[חיות אוכל]] מטבחים" title="חינאווי">
+<div created="20180715130735407" modified="20200226063947902" tags="[[כאן בגטו]] [[חיות אוכל]] מטבחים" title="חינאווי">
 <pre>[img[pictures/hinawi.jpg]]
 
 !!![[תומר]]:
 
-אצל [[חינאווי|http://wineandmore.co.il/pages/8219-Wine--More-%D7%AA%D7%9C-%D7%90%D7%91%D7%99%D7%91-%D7%A7%D7%A8%D7%9C%D7%99%D7%91%D7%9A-25]] המוכרים שמטפלים בך מאד יפה, מבינים ממש במזון ומשקאות. שם אני קונה בשר, אבל גם אלכוהול  ועוד.</pre>
+אצל [[חינאווי|http://wineandmore.co.il/pages/8219-Wine--More-%D7%AA%D7%9C-%D7%90%D7%91%D7%99%D7%91-%D7%A7%D7%A8%D7%9C%D7%99%D7%91%D7%9A-25]] המוכרים שמטפלים בך מאד יפה, מבינים ממש במזון ומשקאות. שם אני קונה בשר, אבל גם אלכוהול  ועוד.
+
+
+&lt;&lt;englink [[Hinnawi]]&gt;&gt;</pre>
 </div>
 <div created="20200209152659274" modified="20200212143925466" tags="סדרות [[בדרך לאן שהוא]] טלוויזיה" title="חינוך מיני">
 <pre>[img[pictures/sex-education.jpg]]
@@ -13282,14 +13298,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Northern Exposure]]&gt;&gt;</pre>
 </div>
-<div created="20180822175257734" modified="20180823134317531" tags="[[כאן בגטו]] [[מטא בדיון]]" title="חשמל אבי">
+<div created="20180822175257734" modified="20200226064857315" tags="[[כאן בגטו]] [[מטא בדיון]] חבר" title="חשמל אבי">
 <pre>[img[pictures/hashmal-avi.jpg]]
 
 !!![[תומר]]:
 
 אני יוצא מהבניין, משתדל לחצות את הכביש לפני הרמזור ועולה ליהודה הלוי, שם אני יורד ימינה ושוב משתדל לחצות את הכביש לפני הרמזור וממשיך לרדת. אני חוצה את מרמורק, עכשיו זה כבר אבן גבירול 1 ובאבן גבירול 5, שזה כמה חנויות קדימה, נמצאת -   //חשמל אבי// - שזה חשמלאי וחנות חשמל, בה נמצאת אילנה - שבעיקר אוהבת דברים יפים, לשפץ מנורות ורהיטים ולעצב -  וככה קניתי היום מנורת שולחן חדשה מצויינת ובמחיר מעולה.
 
-</pre>
+
+
+&lt;&lt;englink [[Hashmal Avi]]&gt;&gt;</pre>
 </div>
 <div created="20190304133114544" modified="20190314144933726" tags="מתכונים [[כשהם ישנים]] אפייה" title="טארט טאטן">
 <pre>[img[pictures/tarte-tatin.jpg]]
@@ -13328,7 +13346,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190404183713312" modified="20190408114406463" tags="[[כאן בגטו]] מוזיקה [[סיפורים אמיתיים]]" title="טבע עירוני">
+<div created="20190404183713312" modified="20200226064644394" tags="[[כאן בגטו]] מוזיקה [[סיפורים אמיתיים]]" title="טבע עירוני">
 <pre>[img[pictures/zirey-kaitz.jpg]]
 
 !!![[תומר]]:
@@ -13350,6 +13368,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 הולך להיות&quot;
 
 מילים: [[מאיר אריאל]], לחן: מאיר אריאל [[ושלום חנוך|שלום חנוך]]
+
+
+&lt;&lt;englink [[Urban Nature]]&gt;&gt;
 </pre>
 </div>
 <div created="20181114151208287" modified="20181114154007734" tags="[[נאמני הגנזך]] [[אירי וגורה]] [[חלומות שחלמנו]] חבר" title="טוטם">
@@ -13361,12 +13382,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180722161146770" modified="20190617133902159" tags="[[כאן בגטו]] [[חיות אוכל]] מטבחים" title="טוני וספה">
+<div created="20180722161146770" modified="20200226065341840" tags="[[כאן בגטו]] מטבחים מסעדות" title="טוני וספה">
 <pre>[img[pictures/tony-vespa.jpg]]
 
 !!![[תומר]]:
 
-אני לא פריק של פיצה אבל כשזה קורה אז [[בטוני וספה|https://www.tonyvespa.co.il/]], בעניין הזה אין שאלה.</pre>
+אני לא פריק של פיצה אבל כשזה קורה אז [[בטוני וספה|https://www.tonyvespa.co.il/]], בעניין הזה אין שאלה.
+
+
+
+&lt;&lt;englink [[Tony Vespa]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20170922153729733" modified="20190722113207959" tags="הסופרנוס טלוויזיה" title="טוני סופרנו">
 <pre>[img[pictures/tony-soprano.jpg]]
@@ -13434,14 +13462,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Torte]]&gt;&gt;</pre>
 </div>
-<div created="20181209115549031" modified="20190617133937353" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="טל בייגלס">
+<div created="20181209115549031" modified="20200226065659006" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="טל בייגלס">
 <pre>[img[pictures/tal-bagels.jpg]]
 
 !!![[תומר]]:
 
 ישנם הימים בהם אני יוצא מהבית, חוצה את החשמונאים, ויורד דרך קריית ספר לפינת קרליבך 41, שם בהחלט נמצא מקום שאפשר לקרוא לו מוסד. הבייגלס תמיד טריים וטעימים, וכך גם הסלטים, המאפים, הקפה, המיץ. לשבת או לקחת. הבייתה או לפיקניק. 
 
-כיתבו [[טל בייגלס|http://www.tal-bagels.co.il/index.php]] בנווטן, ותגיעו לדירה שלנו בצורה המיטבית -  זה מה שאני אומר למי שרוצה לבוא לבקר אותנו. </pre>
+כיתבו [[טל בייגלס|http://www.tal-bagels.co.il/index.php]] בנווטן, ותגיעו לדירה שלנו בצורה המיטבית -  זה מה שאני אומר למי שרוצה לבוא לבקר אותנו. 
+
+
+&lt;&lt;englink [[Tal Bagels]]&gt;&gt;</pre>
 </div>
 <div created="20190310123955900" modified="20200217120047426" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
 <pre>[img[pictures/television.jpg]]
@@ -14308,12 +14339,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
 </div>
-<div created="20191031173942851" modified="20200225172723408" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]] בתים" title="ככל הנראה">
+<div created="20191031173942851" modified="20200226070041818" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]] בתים" title="ככל הנראה">
 <pre>[img[pictures/kechol-hanire.jpg]]
 
 !!![[אימא של ג'אז]]:
 
-מאחורי העציצים, הקיר והחלונות הנאים למראה האלה, שברחוב ביל&quot;ו 29 פינת כרמיה 15, בשקט ובענווה שוכנת [[&quot;ככל הנראה&quot;|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b78bb3c3de1:0xbce6de6b0ed80951!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm%3Dw284-h160-k-no!5z15vXm9ecINeU16DXqNeQ15Qg15HXmdec15UgLSBHb29nbGUgU2VhcmNo&amp;imagekey=!1e10!2sAF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm&amp;sa=X&amp;ved=2ahUKEwigqdac7cjlAhXE6aQKHdEXDoUQoiowCnoECA8QBg]] - המספרה החביבה עלי, ובתוכה מני הנפלא והבנות שאיתו - וזה בילוי בפני עצמו.</pre>
+מאחורי העציצים, הקיר והחלונות הנאים למראה האלה, שברחוב ביל&quot;ו 29 פינת כרמיה 15, בשקט ובענווה שוכנת [[&quot;ככל הנראה&quot;|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b78bb3c3de1:0xbce6de6b0ed80951!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm%3Dw284-h160-k-no!5z15vXm9ecINeU16DXqNeQ15Qg15HXmdec15UgLSBHb29nbGUgU2VhcmNo&amp;imagekey=!1e10!2sAF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm&amp;sa=X&amp;ved=2ahUKEwigqdac7cjlAhXE6aQKHdEXDoUQoiowCnoECA8QBg]] - המספרה החביבה עלי, ובתוכה מני הנפלא והבנות שאיתו - וזה בילוי בפני עצמו.
+
+
+&lt;&lt;englink [[Kehol Haniree]]&gt;&gt;</pre>
 </div>
 <div created="20200130155540635" modified="20200215180734094" tags="[[חיות אוכל]] בתים ילדים מטבחים [[משפחת באומן]] [[בדרך לאן שהוא]]" title="כלים בכיור">
 <pre>[img[pictures/kelim-bakiyor.jpg]]
@@ -15099,7 +15133,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[They feed the conscience]]&gt;&gt;</pre>
 </div>
-<div created="20181018172540054" modified="20181020142324163" tags="מסעדות [[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] אימהות" title="מאנטה ריי">
+<div created="20181018172540054" modified="20200226070523144" tags="מסעדות [[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] אימהות" title="מאנטה ריי">
 <pre>[img[pictures/mantaray.jpg]]
 
 !!![[אווה]]:
@@ -15110,7 +15144,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני בביקור [[אצל אבא|אבינו]] עכשיו, ולפני כמה ימים [[תומר]] הפתיע  אותי והלכנו לארוחת בוקר כאן על הים, מקום בו לא ביקרתי מזמן. אכלתי מר קראנצ'י ושתיתי מיצפיגוז, והיה פיגוזי כל כך, עד שיומיים אחר כך הלכנו שוב, הפעם בשעת בין הערביים, ישבנו על המרפסת, אכלנו מאזטים עם לחם בלקאני, ושתינו מרגריטות קפואות. היה הרבה יותר טוב מטוב  וממה שכתוב באודות שבאתר.
 
-הכי גררררררררר שיש</pre>
+הכי גררררררררר שיש
+
+
+&lt;&lt;englink [[Manta Ray]]&gt;&gt;
+</pre>
 </div>
 <div created="20190511095710523" modified="20190513164622003" tags="[[חיות אוכל]] [[למה הדבר דומה]] [[מתכונים טבעוניים]] מתכונים" title="מאפה טופו ומנגולד">
 <pre>[img[pictures/mangold-tofu.jpg]]
@@ -15305,12 +15343,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Miznon]]&gt;&gt;</pre>
 </div>
-<div created="20181209170135890" modified="20200217151053687" tags="[[כאן בגטו]] אימהות" title="מחאת הנשים">
+<div created="20181209170135890" modified="20200226070829804" tags="[[כאן בגטו]] אימהות" title="מחאת הנשים">
 <pre>[img[pictures/mechaat-hanashim.jpg]]
 
 !!![[תומר]]:
 
-אחרי שבצהריים ראינו את [[ג'אז|Jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב. ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והלכנו לככר רבין, שם המשיכה המחאה הבוערת של הנשים, (אלה [[ששמות לב|היסטריות]] לכל פרט). הן אירגנו הפגנה מקסימה ולמופת. </pre>
+אחרי שבצהריים ראינו את [[ג'אז|Jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב. ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והלכנו לככר רבין, שם המשיכה המחאה הבוערת של הנשים, (אלה [[ששמות לב|היסטריות]] לכל פרט). הן אירגנו הפגנה מקסימה ולמופת. 
+
+
+&lt;&lt;englink [[Women`s protest]]&gt;&gt;
+</pre>
 </div>
 <div created="20170425201738858" modified="20200215101632828" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
 <pre>[img[pictures/mechalkim-nayadim.jpg]]
@@ -15593,12 +15635,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Hand activator ]]&gt;&gt;</pre>
 </div>
-<div created="20190418113727292" modified="20190424150310272" tags="[[כאן בגטו]]" title="מפת הגטו">
+<div created="20190418113727292" modified="20200226071207093" tags="[[כאן בגטו]]" title="מפת הגטו">
 <pre>[img[pictures/ghettos-map.jpg]]
 
 !!![[תומר]]:
 
 אלה פחות או יותר תחומי הגטו מבחינתי, אשר לגבולותיו [[גמישות|blue-marble-hood]] חוצה [[גבולות|imagine]].
+
+
+
+&lt;&lt;englink [[Ghetto`s map]]&gt;&gt;
 </pre>
 </div>
 <div created="20170501184958435" modified="20180704184224701" tags="HH בתים" title="מצפה ראשית">
@@ -16313,12 +16359,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190826152117911" modified="20190922162231230" tags="[[כאן בגטו]]" title="סתיו">
+<div created="20190826152117911" modified="20200226071535551" tags="[[כאן בגטו]]" title="סתיו">
 <pre>[img[pictures/stav.jpg]]
 
 [[תומר]]:
 
-בשליש השלישי של אוגוסט 2019, מחכה למונית שתיקח אותי לתחנת רכבת נתניה, אחרי ביקור אצל רופא השיניים שבכפר.</pre>
+בשליש השלישי של אוגוסט 2019, מחכה למונית שתיקח אותי לתחנת רכבת נתניה, אחרי ביקור אצל רופא השיניים שבכפר.
+
+
+
+&lt;&lt;englink [[Autumn]]&gt;&gt;</pre>
 </div>
 <div created="20200207164959548" modified="20200212201329063" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
 <pre>[img[pictures/agvanyot-batanoor.jpg]]
@@ -17625,12 +17675,15 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Panettone]]&gt;&gt;</pre>
 </div>
-<div created="20180715130000278" modified="20190617134720721" tags="[[כאן בגטו]] [[חיות אוכל]] מטבחים מסעדות" title="פסטה מיאה">
+<div created="20180715130000278" modified="20200226071842042" tags="[[כאן בגטו]] [[חיות אוכל]] מטבחים מסעדות" title="פסטה מיאה">
 <pre>[img[pictures/pasta-mia.jpg]]
 
 !!![[תומר]]:
 
-בהחלט נעים וטעים לאכול [[בפסטה מיאה|http://pastamia.co.il/]] שבווילסון, אך לרוב אני קונה שם פסטה ומכין בבית. הכי אני אוהב את [[החונקי כמרים|http://pastamia.co.il/pasta_catalog.pdf]]</pre>
+בהחלט נעים וטעים לאכול [[בפסטה מיאה|http://pastamia.co.il/]] שבווילסון, אך לרוב אני קונה שם פסטה ומכין בבית. הכי אני אוהב את [[החונקי כמרים|http://pastamia.co.il/pasta_catalog.pdf]]
+
+
+&lt;&lt;englink [[Pasta Mia]]&gt;&gt;</pre>
 </div>
 <div created="20170512173606585" modified="20200215162610647" tags="ילדים" title="פעם">
 <pre>!!![[האחיות כהן]]:
