--- a/english.html
+++ b/english.html
@@ -255,6 +255,8 @@ Error message and password prompt
 
 <li>9-side-wishing-star</li>
 
+<li>A December`s night</li>
+
 <li>A Fairy Tale's Mother</li>
 
 <li>A friend</li>
@@ -547,6 +549,8 @@ Error message and password prompt
 
 <li>logo-bg</li>
 
+<li>Lotus books</li>
+
 <li>Love</li>
 
 <li>Manta Ray</li>
@@ -600,6 +604,8 @@ Error message and password prompt
 <li>Nehama Vahetzi</li>
 
 <li>Northern Exposure</li>
+
+<li>Notbook</li>
 
 <li>Odelia</li>
 
@@ -661,6 +667,8 @@ Error message and password prompt
 
 <li>Recipes</li>
 
+<li>Renovating an selling furniture</li>
+
 <li>Restaurants</li>
 
 <li>Revision in the kitchen</li>
@@ -719,6 +727,8 @@ Error message and password prompt
 
 <li>Technical director</li>
 
+<li>Teder/Romano</li>
+
 <li>Tel Aviv Desk</li>
 
 <li>The archive's trustees</li>
@@ -766,6 +776,8 @@ Error message and password prompt
 <li>The lab</li>
 
 <li>The real Dod</li>
+
+<li>The relief is down the road</li>
 
 <li>The right hand doesn't know</li>
 
@@ -815,9 +827,13 @@ Error message and password prompt
 
 <li>We Went to Mom's Memorial</li>
 
+<li>We were born</li>
+
 <li>Wes Anderson</li>
 
 <li>what does a thing assemble</li>
+
+<li>What have you done for peace today</li>
 
 <li>When people were still optimistic</li>
 
@@ -8712,7 +8728,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Notbook [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8917,6 +8933,16 @@ coming soon as possible
 
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
+</div>
+<div created="20200226093553507" modified="20200226093727098" tags="[[Here in the Ghetto]] Music" title="A December`s night">
+<pre>
+[img[pictures/layla-kan.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[לילה בדצמבר]]&gt;&gt;
+</pre>
 </div>
 <div created="20200215154318530" modified="20200215155042112" tags="Mothers [[True stories]]" title="A Fairy Tale's Mother">
 <pre>[img[pictures/ima-mehaagadot.jpg]]
@@ -9892,7 +9918,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200226072629369" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200226094445734" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10833,6 +10859,14 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
+<div created="20200226093936725" modified="20200226094207815" tags="[[Here in the Ghetto]] [[True stories]]" title="Lotus books">
+<pre>
+[img[pictures/lotus.jpg]]
+
+
+
+ &lt;&lt;heblink [[לוטוס ספרים]]&gt;&gt;</pre>
+</div>
 <div created="20200202180428182" modified="20200219185033235" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
@@ -11202,6 +11236,14 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 &lt;&lt;list-links filter:&quot;[tag[Northern Exposure ]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[חשיפה לצפון]]&gt;&gt;</pre>
+</div>
+<div created="20200226094327852" modified="20200226094506605" tags="[[Here in the Ghetto]] Metafiction" title="Notbook">
+<pre>
+[img[pictures/notbook.jpg]]
+
+
+
+ &lt;&lt;heblink [[נוטבוק]]&gt;&gt;</pre>
 </div>
 <div created="20200217133031335" modified="20200217133537659" tags="HH" title="Odelia">
 <pre>[img[pictures/150crYxBlBOKkAyo.jpg]]
@@ -11589,6 +11631,16 @@ From our [[rear window|https://www.imdb.com/title/tt0047396/]] you can mostly he
  &lt;&lt;heblink [[מתכונים]]&gt;&gt;
 </pre>
 </div>
+<div created="20200226091811039" modified="20200226092026164" tags="Houses" title="Renovating an selling furniture">
+<pre>
+[img[pictures/meshapzim-rahitim.jpg]] 
+
+
+
+
+
+ &lt;&lt;heblink [[משפצים ובונים רהיטים]]&gt;&gt;</pre>
+</div>
 <div created="20200213155146777" modified="20200213155334654" tags="Kitchens [[Food addicts]]" title="Restaurants">
 <pre>[img[pictures/misadot.jpg]]
 
@@ -11944,6 +11996,15 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
 
 </pre>
 </div>
+<div created="20200226092717325" modified="20200226092939415" tags="[[Here in the Ghetto]] Music Restaurants Kitchens" title="Teder/Romano">
+<pre>
+[img[pictures/teder-romano.jpg]]
+
+
+
+ &lt;&lt;heblink [[התדר בואך רומנו]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217151145172" modified="20200219131838576" tags="[[Here in the Ghetto]] Metafiction" title="Tel Aviv Desk">
 <pre>[img[pictures/maarechet-tel-aviv.jpg]]
 
@@ -12246,6 +12307,14 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 </pre>
 </div>
+<div created="20200226092322458" modified="20200226092617422" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="The relief is down the road">
+<pre>
+[img[pictures/hakala.jpg]]
+
+
+
+ &lt;&lt;heblink [[הקלה אחר כך]]&gt;&gt;</pre>
+</div>
 <div created="20200215093007979" modified="20200215093300983" tags="[[In the Animal Farm]]" title="The right hand doesn't know">
 <pre>[img[pictures/yad-yamin.jpg]]
 
@@ -12516,6 +12585,14 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
  &lt;&lt;heblink [[נסענו לאזכרה של אימא]]&gt;&gt;
 </pre>
 </div>
+<div created="20200226091329887" modified="20200226091546946" tags="Mothers Children [[Coen sister]] [[The team]] [[Single parent children]]" title="We were born">
+<pre>
+[img[pictures/noladnu.jpg]]
+
+
+
+ &lt;&lt;heblink [[נולדנו]]&gt;&gt;</pre>
+</div>
 <div created="20200213175731975" modified="20200216184210109" tags="[[Outer sisters]] Films" title="Wes Anderson">
 <pre>[img[pictures/wes-anderson.jpg]]
 
@@ -12550,6 +12627,16 @@ And the mushrooms? Aren't they in pain?
 
 
  &lt;&lt;heblink [[למה הדבר דומה]]&gt;&gt;</pre>
+</div>
+<div created="20200226093148898" modified="20200226093501383" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Houses [[True stories]]" title="What have you done for peace today">
+<pre>
+[img[pictures/ma-asita-hayom.jpg]]
+
+
+ &lt;&lt;heblink [[מה עשית היום למען השלום]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200215164420935" modified="20200215165518955" tags="Once" title="When people were still optimistic">
 <pre>''They used to wave hi to each other''
